Bug 137068 - Bitmap fill isn't nicely filling within the shape lines in presentation mode (Skia)
Summary: Bitmap fill isn't nicely filling within the shape lines in presentation mode ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-09-27 12:46 UTC by Telesto
Modified: 2023-11-11 09:01 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file (545.06 KB, application/vnd.oasis.opendocument.presentation)
2020-09-27 12:46 UTC, Telesto
Details
Screenshot (643.69 KB, image/jpeg)
2020-09-27 12:48 UTC, Telesto
Details
Screenshot with a problem (631.09 KB, image/png)
2020-09-27 13:51 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-27 12:46:20 UTC
Description:
Bitmap fill isn't nicely filling within the shape lines in presentation mode (Skia)

Steps to Reproduce:
1. Open the attached file
2. Press F5
3. Press enter or mouse click

Not happening if it's the first sheet

Actual Results:
Bitmap outside yellow border

Expected Results:
Within as with GDI


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 52a49f9e480ca03e231cfda82640a928393131c9
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-27 12:46:39 UTC
Created attachment 165885 [details]
Example file
Comment 2 Telesto 2020-09-27 12:48:04 UTC
Created attachment 165886 [details]
Screenshot
Comment 3 Roman Kuznetsov 2020-09-27 13:50:20 UTC
confirm in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 06b9e703f536e2751e3cd584873e00907672cf2d
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 4 Roman Kuznetsov 2020-09-27 13:51:13 UTC
Created attachment 165888 [details]
Screenshot with a problem
Comment 5 Commit Notification 2020-11-20 11:30:33 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/99f2ae505d2d2dd104842c2133488210c354f731

tools::Polygon::Clip() is broken with bezier curves (tdf#137068)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.