tools::Polygon::Clip() is broken with bezier curves (tdf#137068)

It preserves the points, but not the flags. Work this around
by temporarily converting to B2DPolygon, where it works.

Change-Id: I120264fbc4c7c508386f23a06435891199565aae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106188
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>