tools/CppunitTest_tools_test.mk
@@ -21,6 +21,7 @@ $(eval $(call gb_CppunitTest_add_exception_objects,tools_test, \
     tools/qa/cppunit/test_inetmime \
     tools/qa/cppunit/test_json_writer \
     tools/qa/cppunit/test_pathutils \
+    tools/qa/cppunit/test_poly \
     tools/qa/cppunit/test_reversemap \
     tools/qa/cppunit/test_stream \
     tools/qa/cppunit/test_urlobj \
